src/App.css
.App {
  background-color: #F2F2F2;
  color: black;
  font-size: calc(10px + 2vmin);
  font-family: 'Noto Sans JP', sans-serif;
}

.App a {
  text-decoration: none;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.AboutMe {
  margin: 10px;
}

.AboutMe .ProfilePic {
  margin: 15px;
  padding: 10px;
  float: left;
}

.App-link {
  color: #61dafb;
}

.ArtExample img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.ArtExample p {
  text-align: center;
}

.Contact {
  background-color: #fff;
  padding: 15px;
  width: 100%;
}

.Contact .email {
  font-family: monospace;
  font-size: 80%;
  color: #f2f2f2;
  background: #333;
  padding: 4px;
}

.Contact a {
  color: #333;
  padding: 6px;
}

.Contact a:visited {
  color: #333;
}

.Contact a:hover {
  background: #aaa;
}

.Highlighted {
  background: rgb(255, 255, 215);
}

.MainFlexContainer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.MainFlexContainer a {
  color: grey;
}
.Portfolio {
  margin: 10px;
}
.Portfolio .Description {
  padding-left: 25px;
}

.Portfolio .Projects {
  color: #bbb;
  background: black;
  border-radius: 40px;
  margin: 25px;
  padding: 25px;
}

.ReactAd {
  font-size: 70%;
  color: grey;
  margin: 10px;
  padding: 15px;
}

.TopBanner {
  margin-top: 55px; /* Add a top margin to avoid content overlay */
}

.Name {
  font-weight: bolder;
  text-align: center;
  color: #222; /* Just for testing */
  font-size: 250%;
  padding-top: 30px;
}

.TagLine {
  text-align: center;
  color: #777777;
  font-size: 150%;
  font-weight: lighter;
}

.TopBar {
  overflow: hidden;
  background-color: #333; /* Change this later */
  position: fixed;
  top: 0; /* Position the navbar at the top of the page */
  width: 100%; /* Full Width */
}

.TopBar a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px; 
  text-decoration: none;
}

.TopBar span {
  float: right;
  display: block;
  background: black;
  color: #f2f2f2;
  padding: 14px 16px; 
}

/* Change background on mouse-over */
.TopBar a:hover {
  background: #ddd;
  color: black;
}

.Footer {
  background-color: #D3D3D3;
  display: flex;
  flex-direction: row;
  padding: 15px; /* Nice cushion */
}
.Footer .Copyright {
  color: black;
}
.Footer .CopyrightName {
  margin-left: 30px;
  color: black;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

